--- a/Filmtalk/.env
+++ b/Filmtalk/.env
@@ -2,3 +2,9 @@ REACT_APP_LOGIN_URL='https://gyjytm3oa9.execute-api.us-east-2.amazonaws.com/Prod
 REACT_APP_REGISTER_URL='https://gyjytm3oa9.execute-api.us-east-2.amazonaws.com/Production/register'
 REACT_APP_VERIFY_URL='https://gyjytm3oa9.execute-api.us-east-2.amazonaws.com/Production/verify'
 REACT_APP_API_TOKEN=4dy2wRGCMc4vUbGiUYMCEDKxaglztN8qQCxbv600
+REACT_APP_ADDTOWATCHLIST_URL='https://gyjytm3oa9.execute-api.us-east-2.amazonaws.com/Production/addtowatchlist'
+REACT_APP_REMOVEFROMWATCHLIST_URL='https://gyjytm3oa9.execute-api.us-east-2.amazonaws.com/Production/removefromwatchlist'
+REACT_APP_GETALLCARDS_URL='https://gyjytm3oa9.execute-api.us-east-2.amazonaws.com/Production/getAllCards'
+REACT_APP_ADDNEWCARD_URL='https://gyjytm3oa9.execute-api.us-east-2.amazonaws.com/Production/addNewCard'
+REACT_APP_RETRIEVECOMMENTS_URL='https://gyjytm3oa9.execute-api.us-east-2.amazonaws.com/Production/retrieveComments'
+REACT_APP_SAVECOMMENT_URL='https://gyjytm3oa9.execute-api.us-east-2.amazonaws.com/Production/saveComment'
