--- a/Filmtalk/package.json
+++ b/Filmtalk/package.json
@@ -15,7 +15,10 @@
     "@chakra-ui/icons": "^2.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
-    "framer-motion": "^6.0.0"
+    "framer-motion": "^6.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
