so close to deployment bruh

--- a/Filmtalk/.env
+++ b/Filmtalk/.env
@@ -8,3 +8,5 @@ REACT_APP_GETALLCARDS_URL='https://gyjytm3oa9.execute-api.us-east-2.amazonaws.co
 REACT_APP_ADDNEWCARD_URL='https://gyjytm3oa9.execute-api.us-east-2.amazonaws.com/Production/addNewCard'
 REACT_APP_RETRIEVECOMMENTS_URL='https://gyjytm3oa9.execute-api.us-east-2.amazonaws.com/Production/retrieveComments'
 REACT_APP_SAVECOMMENT_URL='https://gyjytm3oa9.execute-api.us-east-2.amazonaws.com/Production/saveComment'
+REACT_APP_ADDLIKE_URL='https://gyjytm3oa9.execute-api.us-east-2.amazonaws.com/Production/addLike'
+REACT_APP_ADDDISLIKE_URL='https://gyjytm3oa9.execute-api.us-east-2.amazonaws.com/Production/addDislike'
